<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/subtitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Linlayout"
        android:weightSum="1">

        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/accel_x_text"
            android:id="@+id/textAccX" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/accel_y_text"
            android:id="@+id/textAccY" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/accel_z_text"
            android:id="@+id/textAccZ" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/mov_x_text"
            android:id="@+id/movAccX" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/mov_y_text"
            android:id="@+id/movAccY" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/mov_z_text"
            android:id="@+id/movAccZ" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="mov total"
            android:id="@+id/movAcc" />
        <TextView
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="Time"
            android:id="@+id/time" />
    </LinearLayout>

</RelativeLayout>
